# aiida-skeaf

./: .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_skeaf/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py
aiida_skeaf/calculations/: __init__.py  skeaf.py  wan2skeaf.py
aiida_skeaf/calculations/functions/: __init__.py
aiida_skeaf/data/: __init__.py
aiida_skeaf/parsers/: __init__.py  skeaf.py  wan2skeaf.py
aiida_skeaf/utils/: __init__.py  builder.py  plot.py
aiida_skeaf/workflows/: __init__.py
aiida_skeaf/workflows/protocols/: skeaf.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_00000.py  example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  run_skeaf.py
examples/input_files/: cylinder.bxsf
tests/: test_calculations.py  test_cli.py  test_data.py
tests/test_calculations/: test_skeaf.in
tests/test_data/: test_input_parameters_optional.yml  test_skeaf_parameters.in
utils/: code_wan2skeaf.yaml  wan2skeaf.py
utils/wan2skeaf.jl/: Manifest.toml  Project.toml  code_wan2skeaf_jl.yaml  wan2skeaf.jl  wjl.7z
